src/App.css
/* ... */
.errorLink {
    color: yellow;
}

.errorLink:hover {
    cursor: pointer;
    background-color: yellow;
    color: black;
}

/* Responsiveness Support for Various devices */

@media (max-width: 1050px), (hover: none) and (pointer:  coarse){
    html {
        font-size: max(1vh, 1vw);
        width: 100%;
    }
    #root {
        width: 100%;
        grid-template-rows: 8rem auto 1fr;
        grid-template-columns: 1fr;
    }

    .navBar {
        grid-template-rows: 100%;
        grid-template-columns: 2fr 3fr 2fr;
    }

    .logo {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .logoText {
        display: none;
    }

    .searchbar {
        width: 100%;
        height: 3rem;
    }

    .searchbar > input {
        font-size: 2rem;
    }

    .homePage {
        width: 60%;
        margin: auto;
    }

    .homePage > h1 {
        font-size: 5rem;
    }

    .homePage > p {
        font-size: 3rem;
    }

    .sideBar {
        height: 100%;
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 1fr;
        gap: 5px;
        padding: 0;
        padding-left: 10px;
        padding-bottom: 10px;
    }

    .option {
        width: 100%;
        display: grid;
        grid-template-columns: 0.2fr 1fr;
        justify-content: center;
    }

    .option > span {
        font-size: 2rem;
    }

    .option > img {
        height: 2rem;
        justify-self: end;
    }

    .sideBar > div:first-child {
        display: none;
    }

    .searchResults {
        grid-template-columns: repeat(auto-fit, minmax(30vw, 1fr));
        justify-items: center;
    }

    .card {
        height: 40rem;
        width: 90%;
        grid-template-rows: 21.333rem 5rem 5.66rem 8rem;
    }

    .cardSteamStats, .cardActions > * {
        font-size: 1.7rem;
    }

    .cardSteamStats {
        flex-direction: column;
        justify-content: flex-start;
        align-items: center;
    }

    .cardRating, .cardRatings {
        margin: 0;
    }

    .cardActions {
        display: grid;
        grid-template-rows: 1fr;
        grid-template-columns: 3fr 1fr;
    }

    .cardAdd, .cardAdded {
        width: 100%;
        text-align: start;
    }

    .cardName {
        font-size: 2rem;
    }

    .cart-modal {
        height: 70vh;
        width: 70vw;
        position: fixed;
        right: calc(50% - 35vw);
        top: calc(50% - 35vh);
        z-index: 3;
    }

    .cart-modal ul {
        height: 80%;
        width: 100%;
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        justify-items: center;
        padding: 0;
    }

    .cartCard {
        position: relative;
        height: 20rem;
        width: 90%;
        grid-template-rows: 1fr 1fr;
    }

    .cartCard > img {
        position: absolute;
        z-index: 1;
        min-height: 0;
        width: 100%;
        height: 100%;
        border: none;
    }
    
    .removeCard {
        text-align: center;
        display: flex;
        justify-content: center;
        align-items: center;
        height: auto;
        width: auto;
        font-size: 2rem;
    }

    .cartCardName, .cartCardActions {
        z-index: 2;
        background-color: rgba(0, 60, 116, 0.772);
        color: rgb(255, 240, 33);
        font-weight: 800;
        font-size: 2rem;
        text-shadow: 0 0 0.4rem rgb(127, 127, 127);
    }

    .cartCardActions {
        font-size: 1.8rem;
    }

    .cartActions {
        flex-direction: row;
        font-size: 3rem;
        padding: 0;
    }

    .clearCart {
        font-size: 2.5rem;
        margin-right: 3%;
    }

    .emptyText {
        font-size: 3rem;
    }

    .cartClose {
        display: flex;
        align-items: center;
        justify-content: center;
        top: 1rem;
        right: 1rem;
    }

    .navButtons {
        height: 3rem;
        width: 5rem;
    }

    .itemCount {
        height: 1.2rem;
        width: 1.2rem;
        font-size: 1rem;
        top: 0.3rem;
        right: 0.7rem;
    }
}

